--- a/index.css
+++ b/index.css
@@ -28,7 +28,7 @@ html, body{
 
 .me {
     border-radius: 50%;
-    display: block;
+    display: flexbox;
     margin-top: 15%;
     margin-left: auto;
     margin-right: auto;
