--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@ html, body{
 
 .container-fluid{
     /* \background-image: url("temp_background.jpg"); */
-    background-color: #537d70;
+    background-color: #51917d;
 
     height: 100vh;
 }
